[package]
name = "structure"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
egui = { version = "0.29", features = ["callstack"] }
egui_extras = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19" }
eframe = { version = "0.29", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
parking_lot = "0.12"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive_more = "0.99"
iced-x86 = "1.21.0"
egui_tiles = "0.10.1"
rand = "0.8.5"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Wdk_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_ToolHelp",
]
